# pcclub_sv_global

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: core.h  database.h  webserver.h
src/: core.cpp  database.cpp  webserver.cpp
web/api/: version.html  versioncl.html  versionsvlocal.html  versionsvsave.html
