cmake_minimum_required(VERSION 3.10)
project(pc_sv_global)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
include_directories("include")
add_subdirectory(Crow)
add_executable(${PROJECT_NAME} main.cpp src/core.cpp src/webserver.cpp src/database.cpp)
#add_library(${PROJECT_NAME} SHARED src/server.cpp src/json.c src/exeception.cpp)
target_link_libraries(${PROJECT_NAME} -lm -pthread Crow)